--- a/Ninchi020.html
+++ b/Ninchi020.html
@@ -31,7 +31,7 @@
 <table border="1">
 
   <TR style="background-color:lightgray">
-    <TH>
+    <TH style="width:80px">
       日時
     </TH>
     <TH align="left">
@@ -78,7 +78,7 @@
 
   <TR style="background-color:lightgray">
     <TH align="left">住所
-      <input value="{{ Rec.TxtZyusyo }}" name="TxtZyusyo"style="width:250px"/>
+      <input value="{{ Rec.TxtZyusyo }}" name="TxtZyusyo" style="width:250px"/>
     </TH>
     <TH>生年月日</TH>
     <TH align="left">
@@ -109,11 +109,24 @@
   </TR>
 
   <TR>
-    <TH valign="top" style="background-color:lightgray">
-      相談内容
+    <TH style="background-color:lightgray"  valign="middle">
+      相談状況<BR><BR>
+      <input type="text" id="ZyokyoCtr" disabled="disabled" style="width:40px" >/1000
+      <BR>最大1000バイトです。<BR><BR>
     </TH>
     <TD valign="top" colspan="4">
-      <textarea name="TxtNaiyo" cols=100 rows=20>{{Rec.TxtNaiyo}}</textarea>
+      <textarea name="TxtZyokyo" cols=100 rows=15  onkeyup="document.getElementById('ZyokyoCtr').value=this.value.length*2">{{Rec.TxtZyokyo}}</textarea>
+    </TD>
+  </TR>
+
+  <TR>
+    <TH valign="top" style="background-color:lightgray">
+      相談内容<BR><BR>
+      <input type="text" id="NaiyoCtr" disabled="disabled"  style="width:40px" >/1000
+      <BR>最大1000バイトです。<BR><BR>
+    </TH>
+    <TD valign="top" colspan="4">
+      <textarea name="TxtNaiyo" cols=100 rows=15 onkeyup="document.getElementById('NaiyoCtr').value=this.value.length*2">{{Rec.TxtNaiyo}}</textarea>
     </TD>
   </TR>
 
