バグ対応他

--- a/Ninchi010.html
+++ b/Ninchi010.html
@@ -23,7 +23,10 @@
 
 				<TR style="background-color:LightGray">
 					<TH Width="84px">
-					  相談番号
+					  更新
+          </TH>
+					<TH Width="84px">
+					  日付
           </TH>
 					<TH Width="300px">
 					  対象者名
@@ -41,6 +44,8 @@
 		<DIV class="scr">
 	    <table border="1">
 				<TR> <!-- # 枠幅設定用行なので高さは０ -->
+					<TH Height="0" Width="80px" style="border-style:none">
+          </TH>
 					<TH Height="0" Width="80px" style="border-style:none">
           </TH>
 					<TH Height="0" Width="300px" style="border-style:none">
