--- a/Ninchi020.html
+++ b/Ninchi020.html
@@ -110,7 +110,7 @@
 
   <TR>
     <TH style="background-color:lightgray"  valign="middle">
-      相談状況<BR><BR>
+      相談経緯<BR><BR>
       <input type="text" id="ZyokyoCtr" disabled="disabled" style="width:40px" >/1000
       <BR>最大1000バイトです。<BR><BR>
     </TH>
