活動実績、活動報告追加

--- a/Ninchi000.html
+++ b/Ninchi000.html
@@ -30,12 +30,21 @@
 <BR>
 <BR>
 
-	<input type="button" class="button"
-		value="統計資料">
+認知症初期集中支援チーム<BR>
+	<input type="button" value="活動実績数" class="button"
+		onclick="location.href='/Ninchi030/'"><BR>
+
+<BR>
+認知症疾患医療センタ<BR>
+	<input type="button" value="活動報告" class="button"
+		onclick="location.href='/Ninchi040/'"><BR>
+
 <!--
 		 onclick="location.href='/Ninchi050/'">
 -->
 
+<BR>
+<BR>
 <BR>
 <label style="font-size:LARGE;COLOR: red">{{ LblMsg }}</label><BR>
 
