年度表示対応
年度表示対応
前年・翌年ボタン追加

--- a/Ninchi040.html
+++ b/Ninchi040.html
@@ -74,6 +74,11 @@
 <BR>
 
 	<input type="button" class="button"
+		value="前年" onclick="location.href='/Ninchi040/?Year={{ Year|add:"-1" }}'">
+	<input type="button" class="button"
+		value="翌年" onclick="location.href='/Ninchi040/?Year={{ Year|add:"1" }}'">
+　　
+	<input type="button" class="button"
 		value="追加" onclick="location.href='/Ninchi041/'">
 　　
 	<input type="button" class="button"
